--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,7 @@ ext{
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-configuration-processor')
     compile('mysql:mysql-connector-java')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("io.springfox:springfox-swagger2:${swagger2}")
