--- a/build.gradle
+++ b/build.gradle
@@ -68,16 +68,28 @@ repositories {
     }
 }
 
+ext{
+    swagger2 = '2.9.2'
+    junit5 = '5.3.0'
+    fastjson = '1.2.49'
+}
+
+configurations {
+    compile.exclude group:'junit',module: 'junit'
+}
+
 task createJavaProject << {
     sourceSets*.java.srcDirs*.each { it.mkdirs() }
     sourceSets*.kotlin.srcDirs*.each { it.mkdirs() }
     sourceSets*.resources.srcDirs*.each { it.mkdirs()}
 }
 
-ext{
-    swagger2 = '2.9.2'
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
-
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -86,15 +98,23 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("io.springfox:springfox-swagger2:${swagger2}")
     compile("io.springfox:springfox-swagger-ui:${swagger2}")
-    //compile('org.springframework.boot:spring-boot-starter-data-mongodb')
+    //compile("com.alibaba:fastjson:${fastjson}")
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-validation')
-    //compile('org.springframework.boot:spring-boot-starter-webflux')
+    compile('org.springframework.boot:spring-boot-starter')
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
     compile('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    //testCompile('io.projectreactor:reactor-test')
+    testCompile("org.junit.jupiter:junit-jupiter-api:${junit5}")
+    testCompile("org.junit.jupiter:junit-jupiter-params:${junit5}")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:${junit5}")
+
 }
+
+
+
+
+
 
