--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -41,7 +41,7 @@ spring:
     properties:
       hibernate:
         hbm2ddl:
-          auto: create
+          auto: update
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
 
