--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -5,7 +5,7 @@ server:
 spring:
   #DataBase DataSources
   datasource:
-    url: jdbc:mysql://localhost:3306/demo_db
+    url: jdbc:mysql://localhost:3306/demo_db?useUnicode=true&characterEncoding=utf-8
     username: root
     password: 123456
     driverClassName: com.mysql.jdbc.Driver
@@ -41,7 +41,7 @@ spring:
     properties:
       hibernate:
         hbm2ddl:
-          auto: create
+          auto: update
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
 
